--- a/css/style.css
+++ b/css/style.css
@@ -20622,3 +20622,17 @@ html {
   right: 20px;
   display: none;
 }
+.jarallax-img {
+    animation: imageFadeIn 2s ease-in-out forwards;
+    /* Start at 0 so it doesn't "flash" before the animation starts */
+    opacity: 0; 
+}
+
+@keyframes imageFadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
