--- a/css/style.css
+++ b/css/style.css
@@ -20784,4 +20784,7 @@ html {
 [data-bs-theme="dark"] .form-control::placeholder {
     color: rgba(255, 255, 255, 0.4);
 }
-
+.doiIcon{width:24px!important;height:24px!important;}
+.text-xs {
+    font-size: 0.70rem!important;;
+}
