--- a/css/style.css
+++ b/css/style.css
@@ -20778,3 +20778,37 @@ html {
   -webkit-text-fill-color: transparent;
   display: inline-block; 
 }
+
+.link-primary {
+  position: relative;
+  display: inline-block;
+  z-index: 1;
+  padding: 0 3px 0 3px;
+}
+
+.link-primary::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  width: 100%;
+  height: 80%;
+  background: rgba(148, 151, 247,.1);
+  z-index: -1;
+  transform: translateY(-50%) scaleX(0);
+  transform-origin: right center;
+  transition: transform 0.5s ease;
+}
+[data-bs-theme="dark"] .link-primary::after {
+  background: rgba(148, 151, 247,.3);
+}
+[data-bs-theme="dark"] .link-primary:hover {
+  color:#fff!important
+}
+.link-primary:hover {
+  color:rgba(79, 82, 196,1)!important
+}
+.link-primary:hover::after {
+  transform: translateY(-50%) scaleX(1);
+  transform-origin: left center;
+}
