--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,18 @@
-@import"https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap";
+@font-face {
+  font-family: 'Roboto';
+  src: url('/fonts/Roboto-VariableFont_wdth,wght.ttf') format('truetype-variations');
+  font-weight: 100 900;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('/fonts/Roboto-Italic-VariableFont_wdth,wght.ttf') format('truetype-variations');
+  font-weight: 100 900;
+  font-display: swap;
+  font-style: italic;
+}
 
 .text-gradient-primary {
 	background: linear-gradient(to right, #6366f1, #8b5cf6, #d946ef);
@@ -9494,7 +9508,7 @@ fieldset:disabled .btn {
 }
 
 .bg-opacity-75 {
-	--si-bg-opacity: 0.75
+	--si-bg-opacity: 0.75 !important
 }
 
 .bg-opacity-100 {
